--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,18 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-router-dom": "^6.0.0",
-    "axios": "^1.5.0"
+    "react-router-dom": "^6.30.2",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "tailwindcss": "^3.3.0"
   },
   "browserslist": {
     "production": [
